fire ice viz: replacing scaleRadial with scaleLinear, fixing screen resizing bugs, removing y-axis tick circles, org chart viz: changing team size cutoff, minor styling updates

--- a/fireandice/fireice-styles.css
+++ b/fireandice/fireice-styles.css
@@ -50,7 +50,7 @@ body {
 }
 
 .area {
-  fill:  #D8D8D8;
+  fill:  #DADADA;
   fill-opacity:  .5;
 }
 
@@ -79,7 +79,6 @@ path.monthLabel {
 }
 
 text.monthLabel {
-  font-size: 0.92rem;
   font-family: 'Raleway', sans-serif;
   text-anchor: middle;
   color: #444444;
