--- a/orgchart/org-styles.css
+++ b/orgchart/org-styles.css
@@ -156,18 +156,14 @@ a:hover {
   box-shadow: 0 0 5px #999999, 0 0 8px #CCCCCC;
 }
 
-.roleGraph text {
-
-}
-
 .roleCountLg {
-  font-size: 2.5rem;
+  font-size: 2.1rem;
   font-family: 'Oswald', sans-serif;
   transform: translate(10px,50px);
 }
 
 .roleCountDesc {
-  font-size: 0.65rem;
+  font-size: 0.6rem;
   font-family: 'Quattrocento', serif;
   transform: translate(10px,68px);
 }
